--- a/entities/alerts/water.yaml
+++ b/entities/alerts/water.yaml
@@ -5,11 +5,11 @@
 
 water:
   name: Water Leak Alert
-  entity_id: group.leak_sensors
+  entity_id: binary_sensor.leak_sensors
   title: 💧 Water Leak Alert!
   message: Water leak detected - check sensors now!
   done_message: clear_notification
-  state: 'on'
+  state: "on"
   repeat: 1
   data:
     tag: water_leak
