--- a/entities/templates/devices_offline.yaml
+++ b/entities/templates/devices_offline.yaml
@@ -23,3 +23,5 @@
 | rejectattr('name','search', 'Kitchen Bulb')
 | list
 | count }}"
+    attributes:
+      navigation_path: /the-matrix/network?anchor=disconnected
