--- a/entities/templates/seedbox_vpn_on.yaml
+++ b/entities/templates/seedbox_vpn_on.yaml
@@ -16,3 +16,5 @@
                         else false
                 }}
               {% endif %}"
+      attributes:
+        navigation_path: /the-matrix/network
