--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -12,4 +12,4 @@ homeassistant:
 #  customize_domain: !include_dir_merge_named ../customizations/domains
 
   # Lets me customize entities based on a matching pattern
-#  customize_glob: !include_dir_merge_named ../customizations/globs
+  customize_glob: !include_dir_merge_named ../customizations/globs
