--- a/ui_lovelace_minimalist/custom_cards/chips/chip_icon_state_if_value.yaml
+++ b/ui_lovelace_minimalist/custom_cards/chips/chip_icon_state_if_value.yaml
@@ -9,7 +9,7 @@ chip_icon_state_if_value:
     icon:
       - color: >
           [[[ if (entity.state > 0 || entity.state == variables.on_state) 
-                return variables.on_color ;
+                return variables.on_color;
               else return "var(--green-color)"; ]]]
   state:
     - operator: "template"
@@ -19,8 +19,10 @@ chip_icon_state_if_value:
           - display: none
   variables:
     ulm_chip_mdi_icon_state_entity: "[[[ return variables.entity; ]]]"
-    on_state: "on"
-    on_color: var(--red-color)
+    on_state: "[[[ return entity.attributes.on_state || 'on'; ]]]"
+    on_color: "[[[ return entity.attributes.on_color || 'var(--red-color)'; ]]]"
   tap_action:
-    action: "[[[ if (variables.navigation_path) return 'navigate'; else return 'more-info'; ]]]"
-    navigation_path: "[[[ return variables.navigation_path; ]]]"
+    action: "[[[ if (entity.attributes.navigation_path) return 'navigate'; else return 'more-info'; ]]]"
+    navigation_path: "[[[ return entity.attributes.navigation_path; ]]]"
+  hold_action:
+    action: more-info
