--- a/ui_lovelace_minimalist/dashboard/views/mainviews/cats.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/cats.yaml
@@ -215,7 +215,7 @@ cards:
       style: |
         ha-card {
           background: 
-            {% if is_state('group.cat_food_status', 'on') %}
+            {% if is_state('binary_sensor.cat_food_status', 'on') %}
               rgba(var(--color-background-red),var(--opacity-bg))
             {% endif %}
         }
